# typing-test

./: app_data.sqlite  constants.py  main.py  pyproject.toml  pyrightconfig.json
logic/: base.py  choose_mode.py  event.py  export_data.py  import_date.py  sign_in_up.py  start_menu.py  statistics.py  test.py
texts/: Lorem ipsum
ui_designer_files/: choose_mode.ui  export_data.ui  import_data.ui  keyboard.ui  sign_in_up.ui  start.ui  statistics.ui  test.ui
ui_files/: choose_mode_ui.py  export_data_ui.py  import_data_ui.py  keyboard_ui.py  sign_in_up_ui.py  start_ui.py  statistics_ui.py  test_ui.py
