[tool.poetry]
name = "typing test"
version = "0.1.0"
description = ""
authors = ["artembalakshinnum1 <artembalakshinnum1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.7"
pyqtgraph = "^0.13.1"
qt-material = "^2.12"
PyQt5-stubs = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

